# go-analyzer-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_CRATES.md  README_RU.md  TODO.md  WINDOWS_SETUP.md  c_legend.md  deny.toml  package-lock.json  package.json
.github/workflows/: coverage.yml  performance.yml  release.yml  rust.yml  security.yml  vscode.yml
code-collector/: .gitignore  Cargo.toml
code-collector/src/: main.rs
doc/: PATH_SETUP.md
go_test/: main.go  test.go
golang_test/: business_heavy.go  comments_layout_check.go  field_signals_check.go  go.mod  main.go  realistic.go  semantic_check.go
src/: analysis.rs  backend.rs  lib.rs  main.rs  semantic.rs  types.rs  util.rs
src/test/: mod.rs  test.rs
tools/goanalyzer-semantic/: go.mod  main.go
vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  create-icon.js  package-lock.json  package.json  tsconfig.json
vscode/scripts/: copy-server.js
vscode/src/: extension.ts
