[package]
name = "go-analyzer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20"
tree-sitter-go = "0.20"
tower-lsp = "0.20.0"
lsp-types = "0.86"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tree-sitter-rust = "0.20"
url = "2"
